Add set user accesses operation. Make AccessLevel string. Generate swagger specs.
