# pkg/model/accesslevel_string.go
@@ -1,16 +1,0 @@
-// Code generated by "stringer -type=AccessLevel -trimprefix=Access"; DO NOT EDIT.
-
-package model
-
-import "strconv"
-
-const _AccessLevel_name = "NoneReadReadDeleteWriteOwner"
-
-var _AccessLevel_index = [...]uint8{0, 4, 8, 18, 23, 28}
-
-func (i AccessLevel) String() string {
-	if i < 0 || i >= AccessLevel(len(_AccessLevel_index)-1) {
-		return "AccessLevel(" + strconv.FormatInt(int64(i), 10) + ")"
-	}
-	return _AccessLevel_name[_AccessLevel_index[i]:_AccessLevel_index[i+1]]
-}
